Address writer review comments
Agent-Logs-Url: https://github.com/tmseidel/ai-git-bot/sessions/2ee15ec5-8649-4511-b2e8-ab3bc99a6434

Co-authored-by: tmseidel <192797+tmseidel@users.noreply.github.com>